[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/Push.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 65, 140, 59, 31 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 66, 14, 59, 31 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -31.0
margin_right = -5.99994
margin_bottom = 31.0
rect_min_size = Vector2( 118, 62 )
texture_normal = SubResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -31.0
margin_right = 124.0
margin_bottom = 31.0
rect_min_size = Vector2( 118, 62 )
texture_normal = SubResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="Voltar" to="." method="_on_Voltar_focus_entered"]
[connection signal="mouse_entered" from="Voltar" to="." method="_on_Voltar_mouse_entered"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="focus_entered" from="Sair" to="." method="_on_Sair_focus_entered"]
[connection signal="mouse_entered" from="Sair" to="." method="_on_Sair_mouse_entered"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
